--- a/static/GoogleMapsColorizr/README.textile
+++ b/static/GoogleMapsColorizr/README.textile
@@ -2,3 +2,5 @@ h1. Google Maps Colorizr
 
 Generates HSL colors for the Google Maps API 3.
 https://github.com/stadtwerk/GoogleMapsColorizr
+and derivatives
+https://github.com/stadtwerk/GoogleMapsColorizr/network
